--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2374,7 +2374,12 @@ spec:
                       to true for the first-level route by the Prometheus operator.
                     type: boolean
                   globalConfig:
-                    description: Boolean indicating whether the alert manager configuration is global or namespaced. This decides whether the first level route configuration namespace matcher is added by the Prometheus operator. If the value is set to true, the namespace label match won't be added to the first level route in the generated alertmanager configuration.
+                    description: Boolean indicating whether the alert manager configuration
+                      is global or namespaced. This decides whether the first level
+                      route configuration namespace matcher is added by the Prometheus
+                      operator. If the value is set to true, the namespace label match
+                      won't be added to the first level route in the generated alertmanager
+                      configuration.
                     type: boolean
                   groupBy:
                     description: List of labels to group by.
